feat: First commit
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey=ViBiOh_goweb
+sonar.projectKey=ViBiOh_kitten
 sonar.organization=vibioh
-sonar.projectName=goweb
+sonar.projectName=kitten
 sonar.sourceEncoding=UTF-8
 
 sonar.sources=.
