--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -41,6 +41,9 @@ spec:
       enabled: true
       compress: true
       hosts:
-      - kitten.vibioh.fr
+        - kitten.vibioh.fr
     pprof:
       enabled: true
+    securityContext:
+      runAsGroup: 1000
+      runAsUser: 1000
