--- a/slack_manifest.yaml
+++ b/slack_manifest.yaml
@@ -31,7 +31,7 @@ features:
       description: Get a squirrel meme
       usage_hint: "[caption text]"
       should_escape: false
-    - command: /custom
+    - command: /meme
       url: https://kitten.vibioh.fr/slack/custom
       description: Get a custom meme from a custom image query
       usage_hint: "[caption text] #imageQuery"
