--- a/slack_manifest.yaml
+++ b/slack_manifest.yaml
@@ -14,27 +14,27 @@ features:
     - command: /kitten
       url: https://kitten.vibioh.fr/slack/kitten
       description: Get a kitten meme
-      usage_hint: "[caption text]"
+      usage_hint: "caption text"
       should_escape: false
     - command: /puppy
       url: https://kitten.vibioh.fr/slack/puppy
       description: Get a puppy meme
-      usage_hint: "[caption text]"
+      usage_hint: "caption text"
       should_escape: false
     - command: /trout
       url: https://kitten.vibioh.fr/slack/trout
       description: Get a trout meme
-      usage_hint: "[caption text]"
+      usage_hint: "caption text"
       should_escape: false
     - command: /squirrel
       url: https://kitten.vibioh.fr/slack/squirrel
       description: Get a squirrel meme
-      usage_hint: "[caption text]"
+      usage_hint: "caption text"
       should_escape: false
     - command: /meme
       url: https://kitten.vibioh.fr/slack/custom
       description: Get a custom meme from a custom image query
-      usage_hint: "[caption text] #imageQuery"
+      usage_hint: "caption text #imageQuery"
       should_escape: false
 oauth_config:
   redirect_urls:
