--- a/slack_manifest.yaml
+++ b/slack_manifest.yaml
@@ -37,6 +37,11 @@ features:
       description: Get a seal meme
       usage_hint: caption text
       should_escape: false
+    - command: /monet
+      url: https://kitten.vibioh.fr/slack/monet
+      description: Get a Monet meme
+      usage_hint: caption text
+      should_escape: false
     - command: /meme
       url: https://kitten.vibioh.fr/slack/custom
       description: Get a custom meme from an image query
