--- a/infra/job.yaml
+++ b/infra/job.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: job
-      version: "0.0.10"
+      version: "0.0.11"
       sourceRef:
         kind: HelmRepository
         name: vibioh
@@ -23,6 +23,8 @@ spec:
     cleanupOnFail: true
   values:
     nameOverride: kitten-discord
+    extraLabels:
+      k8s-cleaner: "true"
     image:
       name: vibioh/discord_configure
       tag: "latest"
