feat: Removing last reference to giphy
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/infra/job.yaml
+++ b/infra/job.yaml
@@ -72,7 +72,7 @@ spec:
           },
           "memegif": {
             "name": "memegif",
-            "description": "Generate a gif with caption from Giphy",
+            "description": "Generate a gif with caption from Tenor",
             "options": [
               {
                 "name": "search",
