--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,6 +29,8 @@ jobs:
   tag:
     name: Release
     runs-on: ubuntu-latest
+    env:
+      gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -38,10 +40,16 @@ jobs:
           go-version: "^1.19"
       - name: Build
         run: make init
+      - name: GPG
+        id: import_gpg
+        if: ${{ env.gpg_private_key != '' }}
+        uses: crazy-max/ghaction-import-gpg@v4
+        with:
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
       - name: Assets
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GO_ARCHS: darwin/amd64 darwin/arm64 linux/amd64 linux/arm linux/arm64 windows/amd64 windows/arm64
+          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
         run: |
           curl --disable --silent --show-error --location --max-time 30 "https://raw.githubusercontent.com/ViBiOh/scripts/main/bootstrap" | bash -s -- "-c" "release"
           export GIT_TAG="$(basename ${{ github.ref }})"
