ci: [skip ci] Changing redis database
Signed-off-by: Vincent Boutour <bob@vibioh.fr>

--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -30,7 +30,7 @@ spec:
       KITTEN_DISCORD_APPLICATION_ID: "959191057835393044"
       KITTEN_DISCORD_PUBLIC_KEY: 2a1eb3b4786bc5dbd59d1f8d35eb44f5243e959158ae75367f57e0d4f169ba47
       KITTEN_LOGGER_JSON: "true"
-      KITTEN_REDIS_ADDRESS: redis:80
+      KITTEN_REDIS_ADDRESS: redis:80/3
       KITTEN_SLACK_CLIENT_ID: "2426300949335.3310973634019"
       KITTEN_TRACER_URL: otel-collector.monitoring:4317
       OTEL_SERVICE_NAME: kitten
