--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -55,6 +55,9 @@ spec:
     resources:
       requests:
         cpu: 500m
+        memory: 128Mi
+      limits:
+        memory: 128Mi
     securityContext:
       runAsGroup: 1000
       runAsUser: 1000
