--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -51,6 +51,7 @@ spec:
       KITTEN_DISCORD_APPLICATION_ID: "959191057835393044"
       KITTEN_DISCORD_PUBLIC_KEY: 2a1eb3b4786bc5dbd59d1f8d35eb44f5243e959158ae75367f57e0d4f169ba47
       KITTEN_LOGGER_JSON: "true"
+      KITTEN_PPROF_AGENT: http://datadog.observability:8126
       KITTEN_REDIS_ADDRESS: redis:6379
       KITTEN_REDIS_DATABASE: "3"
       KITTEN_SLACK_CLIENT_ID: "2426300949335.3310973634019"
