--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -188,3 +188,13 @@ spec:
               - ALL
           readOnlyRootFilesystem: true
           runAsNonRoot: true
+
+    autoscaling:
+      enabled: false
+    ingress:
+      enabled: true
+      compress: true
+      tls:
+        enabled: true
+      hosts:
+        - kitten.vibioh.fr
