--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -24,12 +24,12 @@ spec:
   values:
     nameOverride: kitten
     image:
-      name: vibioh/kitten
-      tag: "202503221826" # {"$imagepolicy": "default:flux-kitten-api:tag"}
+      name: rg.fr-par.scw.cloud/vibioh/kitten
+      tag: "202504071857" # {"$imagepolicy": "default:flux-kitten-api:tag"}
     labels:
       tags.datadoghq.com/env: "production"
       tags.datadoghq.com/service: "kitten"
-      tags.datadoghq.com/version: "202503221826" # {"$imagepolicy": "default:flux-kitten-api:tag"}
+      tags.datadoghq.com/version: "202504071857" # {"$imagepolicy": "default:flux-kitten-api:tag"}
     env:
       - name: GOMAXPROCS
         valueFrom:
