--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -88,7 +88,7 @@ spec:
         - kitten.vibioh.fr
     initContainers:
       - name: discord
-        image: rg.fr-par.scw.cloud/vibioh/discord_configure:v0.9.0 # {"$imagepolicy": "default:discord-configure"}
+        image: rg.fr-par.scw.cloud/vibioh/chatpotte:latest # {"$imagepolicy": "default:flux-chatpotte-web"}
         imagePullPolicy: Always
         env:
           - name: DISCORD_APPLICATION_ID
